# components

./: README.md  pyproject.toml
.github/workflows/: manual-bump-version.yml  on-merge.yml  on-pr.yml  on-release.yml  wf-lint.yml  wf-release.yml  wf-test.yml
ci/: bump_version.py
src/datapane_components/: __init__.py  datasets.py  utils.py
tests/: conftest.py  test_main.py
